# Wireless-Drumset-Player

MainController/: CMakeLists.txt  CMakeLists.txt~  sensor_master.c  sensor_master.c~
Receiver1DrumStick/: CMakeLists.txt  receive.c  receive.c~
Receiver2DrumSticks/: CMakeLists.txt~  receive.c  receive.c~  receiveTemp.c
Serial2wizzi/: serial_comm.py
messages/: datatype.h  message_stack.c  packet.h
